# uv-update-10036-1

./: README.md  pyproject.toml
.github/: dependabot.yml
