[project]
name = "ev-telema"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumitomo Electric Industries, Ltd.", email = "hems@info.sei.co.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "requests-aws4auth>=1.3.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest^8.3.5",
    "boto3^1.37.24",
    "aws-xray-sdk^2.14.0",
    "types-requests^2.32.0.20250328",
    "types-boto3^1.37.24",
    "pytest-cov^6.0.0",
    "pytest-mock^3.14.0",
    "pytest-env^1.1.5",
    "moto^5.1.2",
    "pytest-freezer^0.4.9"
]

linter = [
    "black^25.1.0",
    "isort^6.0.1",
    "mypy^1.15.0",
    "ruff^0.11.2"
]

fastapi = [
    "fastapi^0.115.12",
    "uvicorn^0.34.0",
    "opentelemetry-distro^0.52b1",
    "opentelemetry-sdk-extension-aws^2.1.0",
    "opentelemetry-propagator-aws-xray^1.0.2",
    "python-jose^3.4.0"
]
