[project]
name = "ev-telema"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumitomo Electric Industries, Ltd.", email = "hems@info.sei.co.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "requests-aws4auth>=1.3.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "boto3>=1.37.24,<2.0.0",
    "aws-xray-sdk>=2.14.0,<3.0.0",
    "types-requests>=2.32.0.20250328,<3.0.0",
    "types-boto3>=1.37.24,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-env>=1.1.5,<2.0.0",
    "moto>=5.1.2,<6.0.0",
    "pytest-freezer>=0.4.9,<1.0.0"
]

linter = [
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "mypy>=1.15.0,<2.0.0",
    "ruff>=0.11.2,<1.0.0"
]

fastapi = [
    "fastapi>=0.115.12,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "opentelemetry-distro>=0.52b1,<1.0.0",
    "opentelemetry-sdk-extension-aws>=2.1.0,<3.0.0",
    "opentelemetry-propagator-aws-xray>=1.0.2,<2.0.0",
    "python-jose>=3.4.0,<4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ev_telema"]